<resources>
    <string name="app_name">LayoutDemo</string>
    <string name="video_default_value">5</string>
    <string name="following_default_value">68</string>
    <string name="followers_default_value">14</string>

    <string name="video_title">Videos</string>
    <string name="following_title">Following</string>
    <string name="followers_title">Followers</string>
    
    <string name="default_feed_title">September Sun</string>
    <string name="default_user_name">Sophia Smith</string>
    <string name="default_posted_time">17 minutes ago</string>
    <string name="default_user_weburl">sophiasm.com</string>
    <string name="david_beckham">Đa vít Baeck-hâm</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="or">Or</string>
    <string name="sign_in_capital">SIGN IN</string>
    <string name="no_account_suggestion">No account yet? Create one</string>
    <string name="sign_in_facebook_capital">SIGN IN WITH FACEBOOK</string>
    <string name="sign_in_google_capital">SIGN IN WITH GOOGLE</string>

</resources>
