<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_video_count"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/video_default_value"
            android:textSize="@dimen/text_large"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_video_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/video_title"
            android:textSize="@dimen/text_medium"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_following_count"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/following_default_value"
            android:textSize="@dimen/text_large"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_following_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/following_title"
            android:textSize="@dimen/text_medium"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_followers_count"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/followers_default_value"
            android:textSize="@dimen/text_large"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_followers_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/followers_title"
            android:textSize="@dimen/text_medium"
            android:gravity="center"/>
    </LinearLayout>


</LinearLayout>