<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="@dimen/default_padding"
            android:src="@drawable/img_user_avater" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_feed_tile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/default_feed_title"
                android:textSize="@dimen/text_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="left|center_vertical"
                    android:text="@string/default_user_name"
                    android:textSize="@dimen/text_small" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_follow_status"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"

                    />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_feed_posted_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/default_posted_time" />
    </LinearLayout>
    <ImageView
        android:id="@+id/img_feed_upload"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/img_feed_upload"/>

</LinearLayout>
